src/_scss/pages/dashboard/dashboard.scss
.usa-da-dashboard-page {
    @import '../../layouts/content/content';
    @import '../../components/tooltip/warningTooltip';
    @include contentLayout;
    .display-2 {
        padding-top: rem(24);
    }

    // styling any site banners
    .internal-banner {
        @import "../../layouts/login/_topBanner";
        @include loginTopBanner;
    }
    @import "./dashboardTabs";
    .dashboard-page {
        padding: rem(30);
        .dashboard-page__wrapper {
            @include flex-direction(row);
            @include display(flex);
            width: 100%;
            @media(max-width: $small-screen) {
                display: block;
                .dashboard-page__filters {
                    width: 100%;
                    margin-right: 0;
                }
                .dashboard-page__content {
                    margin-left: 0;
                    margin-top: rem(15);
                }
            }
            .dashboard-page-active {
                width: 100%;
            }
        }
        .dashboard-page__filters {
            @include display(flex);
            @include flex(0 0 auto);
            width: rem(260);
            background-color: $color-white;
            margin-right: rem(15);
            border-radius: rem(5);
            border: solid rem(1) $color-gray-lighter;
            @import "./filterSidebar";
        }
        .dashboard-page__content {
            background-color: $color-white;
            @include flex(1 1 auto);
            min-width: 0;
            margin-left: rem(15);
            border-radius: rem(5);
            border: solid rem(1) $color-gray-lighter;
            &:nth-of-type(2) {
                margin-top: rem(40);
            }
            h2 {
                padding: rem(10) rem(20) rem(3);
                font-size: $h2-font-size;
                margin: 0;
                line-height: rem(38);
            }
            hr {
                border-top: solid rem(1) $color-gray-lighter;
                margin-top: 0;
                margin-left: 0;
                margin-right: 0;
                margin-bottom: rem(26);
            }
            @import "./dashboardMessage";
            @import './dashboardViz';
            @import './graph/warningsInfoGraph';
            @import "./table/summary.scss";
            .dashboard-table-container{
                @import "./table/dashboardTable";
            }
        }
    }
}

